--- a/timecloud.config
+++ b/timecloud.config
@@ -4390,7 +4390,7 @@ CONFIG_PACKAGE_luci-base=y
 # CONFIG_LUCI_LANG_hu is not set
 # CONFIG_LUCI_LANG_pt is not set
 # CONFIG_LUCI_LANG_ro is not set
-CONFIG_LUCI_LANG_en=y
+# CONFIG_LUCI_LANG_en is not set
 # CONFIG_LUCI_LANG_el is not set
 # CONFIG_LUCI_LANG_sk is not set
 # CONFIG_LUCI_LANG_ja is not set
@@ -4735,7 +4735,7 @@ CONFIG_PACKAGE_default-settings=y
 # CONFIG_PACKAGE_luci-i18n-firewall-cs is not set
 # CONFIG_PACKAGE_luci-i18n-firewall-de is not set
 # CONFIG_PACKAGE_luci-i18n-firewall-el is not set
-CONFIG_PACKAGE_luci-i18n-firewall-en=y
+# CONFIG_PACKAGE_luci-i18n-firewall-en is not set
 # CONFIG_PACKAGE_luci-i18n-firewall-es is not set
 # CONFIG_PACKAGE_luci-i18n-firewall-fr is not set
 # CONFIG_PACKAGE_luci-i18n-firewall-he is not set
@@ -4761,7 +4761,7 @@ CONFIG_PACKAGE_luci-i18n-firewall-en=y
 # CONFIG_PACKAGE_luci-i18n-hd-idle-cs is not set
 # CONFIG_PACKAGE_luci-i18n-hd-idle-de is not set
 # CONFIG_PACKAGE_luci-i18n-hd-idle-el is not set
-CONFIG_PACKAGE_luci-i18n-hd-idle-en=y
+# CONFIG_PACKAGE_luci-i18n-hd-idle-en is not set
 # CONFIG_PACKAGE_luci-i18n-hd-idle-es is not set
 # CONFIG_PACKAGE_luci-i18n-hd-idle-fr is not set
 # CONFIG_PACKAGE_luci-i18n-hd-idle-he is not set
@@ -4788,7 +4788,7 @@ CONFIG_PACKAGE_luci-i18n-hd-idle-en=y
 # CONFIG_PACKAGE_luci-i18n-samba-cs is not set
 # CONFIG_PACKAGE_luci-i18n-samba-de is not set
 # CONFIG_PACKAGE_luci-i18n-samba-el is not set
-CONFIG_PACKAGE_luci-i18n-samba-en=y
+# CONFIG_PACKAGE_luci-i18n-samba-en is not set
 # CONFIG_PACKAGE_luci-i18n-samba-es is not set
 # CONFIG_PACKAGE_luci-i18n-samba-fr is not set
 # CONFIG_PACKAGE_luci-i18n-samba-he is not set
