--- a/cr660x.config
+++ b/cr660x.config
@@ -4424,7 +4424,7 @@ CONFIG_PACKAGE_luci-base=y
 # CONFIG_LUCI_LANG_no is not set
 # CONFIG_LUCI_LANG_ms is not set
 # CONFIG_LUCI_LANG_pl is not set
-CONFIG_LUCI_LANG_zh-cn=y
+# CONFIG_LUCI_LANG_zh-cn is not set
 # CONFIG_LUCI_LANG_ko is not set
 # CONFIG_LUCI_LANG_de is not set
 # CONFIG_LUCI_LANG_zh-tw is not set
@@ -4636,7 +4636,7 @@ CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_OFFLOADING=y
 # CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_SHORTCUT_FE is not set
 CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_BBR_CCA=y
 # CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_DNSFORWARDER is not set
-CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_DNSPROXY=y
+# CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_DNSPROXY is not set
 # CONFIG_PACKAGE_luci-app-udpxy is not set
 # CONFIG_PACKAGE_luci-app-uhttpd is not set
 # CONFIG_PACKAGE_luci-app-unblockmusic is not set
@@ -4721,7 +4721,7 @@ CONFIG_PACKAGE_luci-lib-nixio_openssl=y
 # CONFIG_PACKAGE_luci-lib-px5g is not set
 # end of 6. Libraries
 
-CONFIG_PACKAGE_default-settings=y
+# CONFIG_PACKAGE_default-settings is not set
 # CONFIG_PACKAGE_luci-i18n-accesscontrol-zh-cn is not set
 # CONFIG_PACKAGE_luci-i18n-argonne-config-es is not set
 # CONFIG_PACKAGE_luci-i18n-argonne-config-zh-cn is not set
