--- a/hc5661.config
+++ b/hc5661.config
@@ -4347,7 +4347,7 @@ CONFIG_PACKAGE_luci-base=y
 # CONFIG_LUCI_LANG_no is not set
 # CONFIG_LUCI_LANG_ms is not set
 # CONFIG_LUCI_LANG_pl is not set
-CONFIG_LUCI_LANG_zh-cn=y
+# CONFIG_LUCI_LANG_zh-cn is not set
 # CONFIG_LUCI_LANG_ko is not set
 # CONFIG_LUCI_LANG_de is not set
 # CONFIG_LUCI_LANG_zh-tw is not set
@@ -4640,7 +4640,7 @@ CONFIG_PACKAGE_luci-lib-nixio_openssl=y
 # CONFIG_PACKAGE_luci-lib-px5g is not set
 # end of 6. Libraries
 
-CONFIG_PACKAGE_default-settings=y
+# CONFIG_PACKAGE_default-settings is not set
 # CONFIG_PACKAGE_luci-i18n-argonne-config-es is not set
 # CONFIG_PACKAGE_luci-i18n-argonne-config-zh-cn is not set
 # CONFIG_PACKAGE_luci-i18n-base-ca is not set
